[gd_scene load_steps=7 format=3 uid="uid://dbt1go0o51dve"]

[ext_resource type="Script" path="res://Scripts/Ui.gd" id="1_8s76j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fblf"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4ejt"]
bg_color = Color(1, 0.137255, 0, 1)

[sub_resource type="Theme" id="Theme_truys"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_0fblf")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_p4ejt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yiyu5"]
bg_color = Color(0, 0.490196, 0.894118, 1)

[sub_resource type="Theme" id="Theme_hlkwr"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_0fblf")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_yiyu5")

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_8s76j")

[node name="colorRect" type="ColorRect" parent="."]
offset_right = 620.0
offset_bottom = 53.0
color = Color(0.188235, 0.188235, 0.188235, 0.721569)

[node name="colorRect_2" type="ColorRect" parent="."]
offset_left = 1162.0
offset_right = 1279.0
offset_bottom = 53.0
color = Color(0.188235, 0.188235, 0.188235, 0.721569)

[node name="health_bar" type="ProgressBar" parent="."]
offset_left = 77.0
offset_top = 8.0
offset_right = 604.0
offset_bottom = 17.0
theme = SubResource("Theme_truys")
value = 100.0
show_percentage = false

[node name="mana_bar" type="ProgressBar" parent="."]
offset_left = 78.0
offset_top = 35.0
offset_right = 397.0
offset_bottom = 44.0
theme = SubResource("Theme_hlkwr")
value = 100.0
show_percentage = false

[node name="health_label" type="Label" parent="."]
offset_left = 4.0
offset_right = 58.0
offset_bottom = 23.0
text = "HEALTH"

[node name="mana_label" type="Label" parent="."]
offset_left = 15.0
offset_top = 28.0
offset_right = 69.0
offset_bottom = 51.0
text = "MANA"

[node name="day_label" type="Label" parent="."]
offset_left = 1167.0
offset_top = 26.0
offset_right = 1221.0
offset_bottom = 49.0
text = "DAY : 1"

[node name="score_label" type="Label" parent="."]
offset_left = 1166.0
offset_top = 2.0
offset_right = 1257.0
offset_bottom = 25.0
text = "SCORE : 999"
